adding basic layout

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
     <link href="style.css" rel="stylesheet" />
@@ -15,27 +15,56 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">News Breeze</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">News Breeze</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Get Started <span class="sr-only">(current)</span></a>
-                </li>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Get Started <span class="sr-only">(current)</span></a>
+                    </li>
 
 
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="single-blog">
+                    <img src="" alt="News">
+                    <p class="blog-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus perferendis, delectus praesentium nobis laborum commodi atque ex adipisci dicta? Illo ipsa sapiente qui reprehenderit quos. Autem id cum pariatur ratione</p>
+                    <p><a href="" class="read-more-btn">read more</a></p>
+                </div>
+            </div>
+
+
+            <div class="col-md-4">
+                <div class="single-blog">
+                    <img src="" alt="News">
+                    <p class="blog-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus perferendis, delectus praesentium nobis laborum commodi atque ex adipisci dicta? Illo ipsa sapiente qui reprehenderit quos. Autem id cum pariatur ratione</p>
+                    <p><a href="" class="read-more-btn">read more</a></p>
+                </div>
+            </div>
+
+
+            <div class="col-md-4">
+                <div class="single-blog">
+                    <img src="" alt="News">
+                    <p class="blog-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus perferendis, delectus praesentium nobis laborum commodi atque ex adipisci dicta? Illo ipsa sapiente qui reprehenderit quos. Autem id cum pariatur ratione</p>
+                    <p><a href="" class="read-more-btn">read more</a></p>
+                </div>
+            </div>
         </div>
-    </nav>
-
+    </div>
 </body>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
