worked on part of the section where news will be placed.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
     </div>
 </div>
     
-
+<!-- main content of the news breeze page-->
+<div class="stories">
+    <div class="title-box">
+        <h2>Today's top Stories </h2>
+    </div>
+</div>
 
 
 
