adding app logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">News Breeze</a>
+            <a class="navbar-brand" href="index.html">
+                <img src="logo.png" alt="News Breeze">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -25,10 +27,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Get Started <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">Personalise<span class="sr-only">(current)</span></a>
                     </li>
 
-
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Login<span class="sr-only">(current)</span></a>
+                    </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -50,7 +54,7 @@
             <div class="col-md-4">
                 <div class="single-blog">
                     <img src="https://www.pngfind.com/pngs/m/72-725518_cnn-international-logo-png-cnn-news-logo-png.png" alt="News">
-                    <p class="blog-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus perferendis, delectus praesentium nobis laborum commodi atque ex adipisci dicta? Illo</p>
+                    <p class="blog-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea consequuntur, minima sapiente dignissimos ad repellat obcaecati recusandae dolores at nesciunt blanditiis aut quidem ipsum? Expedita delectus unde ea dicta illo.</p>
                     <p><a href="" class="read-more-btn">read more</a></p>
                 </div>
             </div>
@@ -70,3 +74,110 @@
 <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
 </html>
+
+<!--<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>News Breeze</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+    <header>
+        <!-- Displays the logo in the front page 
+        <div class="logo">
+            <a href="index.html">
+                <img src="logo.png" alt="News Breeze">
+            </a>
+        </div>
+        <!-- nav box has search box, signin or register for the first time which leads to a different page
+        and  option dropdown to select how many articles should be displayed from 1-15
+        default is 5  
+        <nav class="nav-box">
+            <input class="search" placeholder="search">
+            <span class="signin">Sign in</span>
+            <span class="register">Register</span>
+            <select> 
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+            </select>
+        </nav>
+    </header>
+    <div class="header-ext">
+        <div class="announcement">
+            News Breeze let's you pick the news from specific sites and also share and personalize your favourite articles.
+        </div>
+    </div>
+
+    <!-- main content of the news breeze page
+    <div class="stories">
+        <div class="title-box">
+            <h2>Today's top Stories </h2>
+        </div>
+    </div>-->
+
+
+
+
+
+
+
+<!-- footer is same as header 
+<footer>
+    <!-- Displays the logo in the front page 
+    <div class="logo">
+        <a href="index.html">
+            <img src="logo.png" alt="News Breeze">
+        </a>
+    </div>
+    <!-- nav box has search box, signin or register for the first time which leads to a different page
+        and  option dropdown to select how many articles should be displayed from 1-15
+        default is 5  
+    <nav class="nav-box">
+        <input class="search" placeholder="search">
+        <span class="signin">Sign in</span>
+        <span class="register">Register</span>
+        <select> 
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+            </select>
+    </nav>
+</footer>
+
+</body>
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
+</html>-->
