--- a/signedPage.html
+++ b/signedPage.html
@@ -18,7 +18,7 @@
     />
 </head>
 <body>
-
+   
 <!--trying Jumbutron-->
 
 <div class="jumbotron">
@@ -32,8 +32,8 @@
     default is 5  -->
      <nav class="nav-box">
         <input class="search" placeholder="search">
-        <a class="signin" href="login.html">Sign in</a>
-        <a class="register" href="register.html">Register</a>
+        <span class="signin"></span>
+        <span class="register"></span>
         <select> 
             <option value="1">1</option>
             <option value="2">2</option>
@@ -60,7 +60,7 @@
 </div>
   </div>
 
-  
+
 <!-- main content of the news breeze page-->
 <div class="stories">
     <div class="title-box">
@@ -133,6 +133,10 @@
 
 
 
+
+
+
+
 <!-- footer is same as header -->
 <footer>
         <!-- Displays the logo in the front page -->
@@ -146,8 +150,8 @@
         default is 5  -->
          <nav class="nav-box">
             <input class="search" placeholder="search">
-            <a class="signin" href="login.html">Sign in</a>
-        <a class="register" href="register.html">Register</a>
+            <span class="signin"></span>
+            <span class="register"></span>
             <select> 
                 <option value="1">1</option>
                 <option value="2">2</option>
