--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- dynamic code generated using javascript -->
     <div class="container">
             <div class="row">
-              <div class="col-sm-3 col-md-3">
+              <div class="col-sm-3 col-md-3 col-xs-12">
                 <!-- <img class="article" src=""> -->
                 <h3>Column1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
@@ -84,7 +84,7 @@
                     <a href="" class="far fa-share-square"></a>
                 </div>
               </div>
-              <div class="col-sm-3 col-md-3">
+              <div class="col-sm-3 col-md-3 col-xs-12">
                 <!-- <img class="article" src=""> -->
                 <h3>Column2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
@@ -99,7 +99,7 @@
                     <a href="" class="far fa-share-square"></a>
                 </div>
               </div>
-              <div class="col-sm-3 col-md-3">
+              <div class="col-sm-3 col-md-3 col-xs-12">
                 <!-- <img class="article"src="">       -->
                 <h3>Column3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
@@ -114,7 +114,7 @@
                     <a href="" class="far fa-share-square"></a>
                 </div>
               </div>
-              <div class="col-sm-3">
+              <div class="col-sm-3 col-md-3 col-xs-12">
                 <h3>Weather</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
