zoom on hover over column.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <!-- tachyons link -->
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 </head>
 <body>
 
@@ -69,7 +71,7 @@
     <!-- dynamic code generated using javascript -->
     <div class="container">
             <div class="row">
-              <div class="col-sm-3 col-md-3 col-xs-12">
+              <div class="grow col-sm-3 col-md-3 col-xs-12">
                 <!-- <img class="article" src=""> -->
                 <h3>Column1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
@@ -84,7 +86,7 @@
                     <a href="" class="far fa-share-square"></a>
                 </div>
               </div>
-              <div class="col-sm-3 col-md-3 col-xs-12">
+              <div class="grow col-sm-3 col-md-3 col-xs-12">
                 <!-- <img class="article" src=""> -->
                 <h3>Column2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
@@ -99,7 +101,7 @@
                     <a href="" class="far fa-share-square"></a>
                 </div>
               </div>
-              <div class="col-sm-3 col-md-3 col-xs-12">
+              <div class="grow col-sm-3 col-md-3 col-xs-12">
                 <!-- <img class="article"src="">       -->
                 <h3>Column3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
@@ -114,7 +116,7 @@
                     <a href="" class="far fa-share-square"></a>
                 </div>
               </div>
-              <div class="col-sm-3 col-md-3 col-xs-12">
+              <div class="grow col-sm-3 col-md-3 col-xs-12">
                 <h3>Weather</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
