be able to hide a html element

--- a/auth.html
+++ b/auth.html
@@ -34,7 +34,9 @@
 
 
     <div id="myDIV">
-        This is my DIV element.
+        <br>
+        <h1>You can only see this after you login</h1>
+        <br>
     </div>
 
 <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
