--- a/auth.html
+++ b/auth.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Auth with Firebase</title> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 </head>
 <body>
 
@@ -14,7 +15,7 @@
 
         <input id="txtPassword" type="password" placeholder="Password">
 
-        <button id="btnLogin" class="btn btn-action" onclick="myFunction()">
+        <button id="btnLogin" class="btn btn-action">
             Log In
         </button>
 
@@ -22,7 +23,7 @@
             Sign Up
         </button>
 
-        <button id="btnLogout" class="btn btn-action hide" onclick="myFunction()">
+        <button id="btnLogout" class="btn btn-action">
             Log Out
         </button>
 
