--- a/index.html
+++ b/index.html
@@ -185,14 +185,18 @@ console.log(title);
 var content = results[i].description;
 
 console.log(content);
-var myCol = $('<div class="col-sm-3 col-md-3 col-xs-12" id="col'+i+'"></div>'); //make a column
+var myCol = $('<div class="grow col-sm-3 col-md-3 col-xs-12" id="col'+i+'"></div>'); //make a column
 // var myCard =$('<div class="card" id="'+i+'Panel"><div class="card-body"><div class="card-title"><span>'+title+'</span><button type ="button" class="close" data-target="'+i+'Panel" data-dismiss="alert"><span class="float-right"><i class ="fa fa-remove"></i></span></button></div><p class="card-text">'+content+'</p></div><div class="card-footer"><small class="text-muted">Last updated 3 mins ago</small></div></div>')
 var card = $('<div class="card" id="'+i+'col"><div class="card-body>');
-var cardHeader = $('<div class="card-header"><h5 class="card-title">').text(title);
+var cardHeader = $('<div class="card-header"><b>').text(title);
+var cardBody= $('<div class="card-body">');
 var cardText = $ ('<div class="card-text">').text(content);
-cardHeader.append(cardText);
-card.append(cardHeader)
+var readMore = $('<div><span class="read"><a class= "read" href="">Read more..</a></span></div><div class="action-container"><a href="" class="far fa-bookmark"></a><a href="" class="far fa-share-square"></a></div>');
+cardHeader.append(cardBody);
+card.append(cardHeader);
+cardBody.append(cardText);
 myCol.append(card);
+cardText.append(readMore);
 $("#main-content").append(myCol);
 
 $('.close').on('click', function(e){
