added image to the header

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 //Populate the home page with headlines
 //Using the headlines query url, this is for only the population of the home page
 $(document).ready (function(){
-        var queryURL = "https://newsapi.org/v2/top-headlines?country=us&apiKey=349152e2740748f4b23c31609ae25dae";
+        var queryURL = "https://newsapi.org/v2/top-headlines?country=us&category=general&apiKey=349152e2740748f4b23c31609ae25dae";
     
     $.ajax({
     url: queryURL,
@@ -182,24 +182,28 @@ for(var i =0;i<results.length;i++){
 var title = results[i].title;
 
 console.log(title);
-var content = results[i].description;
-
-var newsUrl = results[i].url;
+var content = results[i].description; //brief description of the news
+var newsUrl = results[i].url; //link to the news on the news site
+var imageUrl = results[i].urlToImage;
 console.log("URL: ",newsUrl);
-
-console.log(content);
+console.log("Brief Description: ", content);
+console.log("Image URL: ",imageUrl)
 var myCol = $('<div class="grow col-sm-3 col-md-3 col-xs-12" id="col'+i+'"></div>'); //make a column
 // var myCard =$('<div class="card" id="'+i+'Panel"><div class="card-body"><div class="card-title"><span>'+title+'</span><button type ="button" class="close" data-target="'+i+'Panel" data-dismiss="alert"><span class="float-right"><i class ="fa fa-remove"></i></span></button></div><p class="card-text">'+content+'</p></div><div class="card-footer"><small class="text-muted">Last updated 3 mins ago</small></div></div>')
 var card = $('<div class="card " id="'+i+'col"><div class="card-body>');
-var cardHeader = $('<div class="card-header bg-secondary "></div><b>').text(title);
+var cardHeader = $('<div class="card-header bg-secondary"><img src="'+imageUrl+'" class="card-img-top"></div>')
+// var cardImage = $('<img src="'+imageUrl+'" class="card-img-top" style="height:20px;width:10px;"><br>')
 var cardBody= $('<div class="card-body">');
+var cardTitle = $('<div class="card-title"><span>'+title+'</span>')
 var cardText = $ ('<div class="card-text">').text(content);
 var readMore = $('<div><span class="read"><a class= "read" href="'+newsUrl+'">Read more..</a></span></div><div class="action-container"><a href="" class="far fa-bookmark"></a><a href="" class="far fa-share-square"></a></div>');
-cardHeader.append(cardBody);
+
 card.append(cardHeader);
-cardBody.append(cardText);
-myCol.append(card);
+// cardHeader.append(cardImage);
+cardHeader.append(cardTitle);
+cardTitle.append(cardText);
 cardText.append(readMore);
+myCol.append(card);
 $("#main-content").append(myCol);
 
 $('.close').on('click', function(e){
