--- a/signedPage.html
+++ b/signedPage.html
@@ -33,6 +33,7 @@
      <nav class="nav-box">
         <input class="search" placeholder="search">
         <span class="signin"></span>
+        <span class="logOut">Log Out</span>
         <span class="register"></span>
         <select> 
             <option value="1">1</option>
