--- a/login.html
+++ b/login.html
@@ -16,6 +16,11 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <!-- jQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- tachyons link -->
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
+
 </head>
 <body>
    
@@ -61,6 +66,9 @@
         </a> 
     </div>
 </footer>  
-   
+   <!-- JavaScript -->
+   <script type="text/javascript" src="assets/javascript/moment.js"></script>
+   <!-- Link to Moment.js should go here -->
+ <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 </body>
 </html>
