--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>News Breeze</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- css link -->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <!-- font awesome  link -->
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <!-- bootstrap link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <!-- tachyons link -->
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
+
 </head>
 
 <body>
@@ -21,16 +21,16 @@
     <!--trying Jumbutron-->
 
     <div class="jumbotron">
-        <div class="logo">
-            <a href="index.html">
-                <img src="assets/images/logo.png" alt="News Breeze">
-            </a>
-        </div>
+        <!-- <div class="logo"> 
+        <a href="index.html">
+            <img src="assets/images/logo.png" alt="News Breeze">
+        </a> 
+    </div> -->
         <!-- nav box has search box, signin or register for the first time which leads to a different page
     and  option dropdown to select how many articles should be displayed from 1-15
     default is 5  -->
         <nav class="nav-box">
-            <input class="search" id="search" placeholder="search">
+            <input class="search" placeholder="search">
             <a class="signin" href="login.html">Sign in</a>
             <a class="register" href="register.html">Register</a>
             <select> 
@@ -50,7 +50,6 @@
             <option value="14">14</option>
             <option value="15">15</option>
         </select>
-            <button class="btn btn-outline-success my-2 my-sm-0" id="submit" type="submit">Search</button>
 
         </nav>
         </header>
@@ -69,70 +68,67 @@
         </div>
         <!-- dynamic code generated using javascript -->
         <div class="container">
-            <div class="row">
-                <div class="grow col-sm-3 col-md-3 col-xs-12">
-                    <!-- <img class="article" src=""> -->
-                    <h3>Column1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-                    <div>
-                        <span class="read">
+            <div class="row" id="main-content">
+                <!-- <div class=" grow col-sm-3 col-md-3 col-xs-12" id="col0">
+                 <img class="article" src=""> 
+                <div class="modal-body">
+  <h5>Popover in a modal</h5>
+  <p>This <a href="#" role="button" class="btn btn-secondary popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">button</a> triggers a popover on click.</p>
+  <hr>
+  <h5>Tooltips in a modal</h5>
+  <p><a href="#" class="tooltip-test" title="Tooltip">This link</a> and <a href="#" class="tooltip-test" title="Tooltip">that link</a> have tooltips on hover.</p>
+</div>
+                 <div>
+                    <span class="read">
                         <a class= "read" href="">Read more..</a>
                     </span>
-                    </div>
-                    <div class="action-container">
-                        <a href="" class="far fa-bookmark"></a>
-                        <a href="mailto:?subject=I wanted you to see this site&amp;body=Check out this site http://www.website.com." title="Share by Email">
-                            <img src="http://png-2.findicons.com/files/icons/573/must_have/48/mail.png">
-                        </a>
-                    </div>
                 </div>
+                <div class="action-container">
+                    <a href="" class="far fa-bookmark"></a>
+                    <a href="" class="far fa-share-square"></a>
+                </div>
+              </div> 
+              <div class="grow col-sm-3 col-md-3 col-xs-12">
+                 <img class="article" src="">
+                
+                <div>
+                    <span class="read">
+                        <a class= "read" href="">Read more..</a>
+                    </span>
+                </div>
+                <div class="action-container">
+                    <a href="" class="far fa-bookmark"></a>
+                    <a href="" class="far fa-share-square"></a>
+                </div>
+              </div> 
+              <div class="col-sm-3 col-md-3 col-xs-12">
+                <img class="article"src="">      
+                
+                <div>
+                    <span class="read">
+                        <a class= "read" href="">Read more..</a>
+                    </span>
+                </div>
+                <div class="action-container">
+                    <a href="" class="far fa-bookmark"></a>
+                    <a href="" class="far fa-share-square"></a>
+                </div> -->
+            </div>
+            <div class="col-sm-3 col-md-3 col-xs-12">
+                <h3>Weather</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                <h3>Pollen</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
 
-                <div class="grow col-sm-3 col-md-3 col-xs-12">
-                    <!-- <img class="article" src=""> -->
-                    <h3>Column2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-                    <div>
-                        <span class="read">
-                        <a class= "read" href="">Read more..</a>
-                    </span>
-                    </div>
-                    <div class="action-container">
-                        <a href="" class="far fa-bookmark"></a>
-                        <a href="" class="far fa-share-square"></a>
-                    </div>
-                </div>
-                <div class="grow col-sm-3 col-md-3 col-xs-12">
-                    <!-- <img class="article"src="">       -->
-                    <h3>Column3</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-                    <div>
-                        <span class="read">
-                        <a class= "read" href="">Read more..</a>
-                    </span>
-                    </div>
-                    <div class="action-container">
-                        <a href="" class="far fa-bookmark"></a>
-                        <a href="" class="far fa-share-square"></a>
-                    </div>
-                </div>
-                <div class="grow col-sm-3 col-md-3 col-xs-12">
-                    <h3>Weather</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-                    <h3>Pollen</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-
-                </div>
             </div>
         </div>
+    </div>
 
-        <div>
+    <div>
 
-        </div>
+    </div>
     </div>
 
 
@@ -140,11 +136,11 @@
     <!-- footer is same as header -->
     <footer>
         <!-- Displays the logo in the front page -->
-        <div class="logo">
+        <!-- <div class="logo"> 
             <a href="index.html">
                 <img src="assets/images/logo.png" alt="News Breeze">
-            </a>
-        </div>
+            </a> 
+        </div> -->
         <!-- nav box has search box, signin or register for the first time which leads to a different page
         and  option dropdown to select how many articles should be displayed from 1-15
         default is 5  -->
@@ -169,11 +165,114 @@
                 <option value="14">14</option>
                 <option value="15">15</option>
             </select>
-            <button class="btn btn-outline-success my-2 my-sm-0" id="submit" type="submit">Search</button>
-
         </nav>
     </footer>
 
+
+    <!--script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+<script>
+    //Populate the home page with headlines
+    //Using the headlines query url, this is for only the population of the home page
+    var queryURL = "https://newsapi.org/v2/top-headlines?country=us&category=general&pageSize=10&q=&apiKey=349152e2740748f4b23c31609ae25dae";
+    $(document).ready(function() {
+        query();
+    });
+    $("#submit").click(function() {
+        var search = $("#search").val().trim();
+        console.log("SearchTerm: ", search);
+        queryURL = "https://newsapi.org/v2/everything?pageSize=10&q=" + search + "&apiKey=349152e2740748f4b23c31609ae25dae";
+        console.log("Query URL : ", queryURL);
+        $(".row").empty();
+        query();
+    });
+
+    function query() {
+
+        $.ajax({
+            url: queryURL,
+            method: "GET"
+        }).then(function(response) {
+            var results = response.articles;
+            console.log(results);
+            for (var i = 0; i < results.length; i++) {
+                var title = results[i].title;
+                console.log(title);
+                var content = results[i].description; //brief description of the news
+                var newsUrl = results[i].url; //link to the news on the news site
+                var imageUrl = results[i].urlToImage; //link to the news image;
+                console.log("URL: ", newsUrl);
+                console.log("Brief Description: ", content);
+                console.log("Image URL: ", imageUrl)
+                var myCol = $('<div class="grow col-sm-3 col-md-3 col-xs-12" id="col' + i + '"></div>'); //make a column
+                var card = $('<div class="card " id="' + i + 'col"><div class="card-body>');
+                var cardHeader = $('<div class="card-header bg-secondary"><img src="' + imageUrl + '" class="card-img-top"></div>')
+                    // var cardImage = $('<img src="'+imageUrl+'" class="card-img-top" style="height:20px;width:10px;"><br>')
+                var cardBody = $('<div class="card-body">');
+                var cardTitle = $('<div class="card-title"><span>' + title + '</span>')
+                var cardText = $('<div class="card-text">').text(content);
+                var readMore = $(
+                    /*    
+                '<div><span class="read"> ' + 
+                    '<a class= "read" href="' +
+                    newsUrl +
+                    '">Read more..</a>' +
+                     '</span></div>'+
+*/
+                    '<div class="action-container"><a href="" class="far fa-bookmark"></a>' +
+                    // '<a href="" class="far fa-share-square">' +
+
+                    '<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">' +
+                    '  share' +
+                    '</button>' +
+                    '<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">' +
+                    '  <div class="modal-dialog" role="document">' +
+                    '    <div class="modal-content">' +
+                    '      <div class="modal-header">' +
+                    '        <h5 class="modal-title" id="exampleModalLabel">Share</h5>' +
+                    '        <button type="button" class="close" data-dismiss="modal" aria-label="Close">' +
+                    '          <span aria-hidden="true">&times;</span>' +
+                    '        </button>' +
+                    '      </div>' +
+                    '      <div class="modal-body">' +
+                    '        <a class="twitter-share-button"href="https://twitter.com/intent/tweet">Tweet</a>' +
+                    '</div>' +
+                    '      <div class="modal-footer">' +
+                    '        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>' +
+                    '        <button type="button" class="btn btn-primary">Save changes</button>' +
+                    '      </div>' +
+                    '    </div>' +
+                    '  </div>' +
+                    '</div>' +
+                    '</div>');
+                // +
+                //'</a> ' +
+                ///div>);
+
+                card.append(cardHeader);
+                // cardHeader.append(cardImage);
+                cardHeader.append(cardTitle);
+                cardTitle.append(cardText);
+                cardText.append(readMore);
+                myCol.append(card);
+                $(".row").append(myCol);
+                $('.close').on('click', function(e) {
+                    e.stopPropagation();
+                    var $target = $(this).parents('.col-sm-3');
+                    $target.hide('slow', function() {
+                        $target.remove();
+                    });
+                });
+                $(".read").click(function(e) {
+                    e.stopPropagation();
+                    window.open(newsUrl, '_blank');
+                })
+            }
+        });
+    }
+</script>
+
 
 </html>
