--- a/index.html
+++ b/index.html
@@ -190,7 +190,6 @@
     });
 
     function query() {
-
         $.ajax({
             url: queryURL,
             method: "GET"
@@ -223,7 +222,6 @@
 */
                     '<div class="action-container"><a href="" class="far fa-bookmark"></a>' +
                     // '<a href="" class="far fa-share-square">' +
-
                     '<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">' +
                     '  share' +
                     '</button>' +
@@ -232,16 +230,19 @@
                     '    <div class="modal-content">' +
                     '      <div class="modal-header">' +
                     '        <h5 class="modal-title" id="exampleModalLabel">Share</h5>' +
-                    '        <button type="button" class="close" data-dismiss="modal" aria-label="Close">' +
-                    '          <span aria-hidden="true">&times;</span>' +
-                    '        </button>' +
+                    //'        <button type="button" class="close" data-dismiss="modal" aria-label="Close">' +
+                    //'          <span aria-hidden="true">&times;</span>' +
+                    //'        </button>' +
                     '      </div>' +
                     '      <div class="modal-body">' +
-                    '        <a class="twitter-share-button"href="https://twitter.com/intent/tweet">Tweet</a>' +
+                    '        <a class="twitter-share-button"href="https://twitter.com/intent/tweet">Tweet</a>' + '<br/>' +
+                    '<a href="mailto:?subject=<SUBJECT>&body=<BODY>"target="_blank" class="share-btn email"><i class="fa fa-envelope"></i></a></a>' +
+                    //'<a class="share-popover-row mail" href="#">Mail</a>' +
                     '</div>' +
-                    '      <div class="modal-footer">' +
+
+                    '<div class="modal-footer">' +
                     '        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>' +
-                    '        <button type="button" class="btn btn-primary">Save changes</button>' +
+                    //'        <button type="button" class="btn btn-primary">Save changes</button>' +
                     '      </div>' +
                     '    </div>' +
                     '  </div>' +
@@ -250,7 +251,6 @@
                 // +
                 //'</a> ' +
                 ///div>);
-
                 card.append(cardHeader);
                 // cardHeader.append(cardImage);
                 cardHeader.append(cardTitle);
