--- a/index.html
+++ b/index.html
@@ -71,14 +71,7 @@
             <div class="row" id="main-content">
                 <!-- <div class=" grow col-sm-3 col-md-3 col-xs-12" id="col0">
                  <img class="article" src=""> 
-                <div class="modal-body">
-  <h5>Popover in a modal</h5>
-  <p>This <a href="#" role="button" class="btn btn-secondary popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">button</a> triggers a popover on click.</p>
-  <hr>
-  <h5>Tooltips in a modal</h5>
-  <p><a href="#" class="tooltip-test" title="Tooltip">This link</a> and <a href="#" class="tooltip-test" title="Tooltip">that link</a> have tooltips on hover.</p>
-</div>
-                 <div>
+               
                     <span class="read">
                         <a class= "read" href="">Read more..</a>
                     </span>
@@ -212,14 +205,7 @@
                 var cardBody = $('<div class="card-body">');
                 var cardTitle = $('<div class="card-title"><span>' + title + '</span>')
                 var cardText = $('<div class="card-text">').text(content);
-                var readMore = $(
-                    /*    
-                '<div><span class="read"> ' + 
-                    '<a class= "read" href="' +
-                    newsUrl +
-                    '">Read more..</a>' +
-                     '</span></div>'+
-*/
+                var readMore = $('<div><span class="read">' + '<a class= "read" href="' + newsUrl + '">Read more..</a>' + '</span></div>' +
                     '<div class="action-container"><a href="" class="far fa-bookmark"></a>' +
                     // '<a href="" class="far fa-share-square">' +
                     '<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">' +
