--- a/index.html
+++ b/index.html
@@ -130,5 +130,30 @@
    <script type="text/javascript" src="assets/javascript/moment.js"></script>
    <!-- Link to Moment.js should go here -->
  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+<script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyCo4xVWn7Ypizk-6VB6XjTeb2ewiqaryic",
+        authDomain: "projectone-cbac5.firebaseapp.com",
+        databaseURL: "https://projectone-cbac5.firebaseio.com",
+        projectId: "projectone-cbac5",
+        storageBucket: "projectone-cbac5.appspot.com",
+        messagingSenderId: "31129312771",
+        appId: "1:31129312771:web:8a5072bcf95acf7dfcf836"
+    };
+      
+        // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    var database = firebase.database();
+    //make auth and firestore reference
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+    //update firestore settings
+    //db.setting({timestampsINSnapshots: true});
+</script>
 </body>
 </html>
