copying the link to the shatre

--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
 
                     '      </div>' +
                     '      <div class="modal-body">' +
-                    '      <a class="twitter-share-button"href="https://twitter.com/intent/tweet">Tweet</a>' + '<br/>' +
-
-                    '<a href="mailto:?subject=<SUBJECT>&body=<BODY>"target="_blank" class="share-btn email"><i class="fa fa-envelope"></i></a></a>' +
+                    '      <a class="twitter-share-button"href="https://twitter.com/intent/tweet?text=' + newsUrl + '">Tweet</a>' + '<br/>' +
+                    '<a href="mailto:?subject=' + title + '&body=' + newsUrl + '"target="_blank" class="share-btn email">Mail</a></a>' +
+                    //'<a href="mailto:?subject=<SUBJECT>&body=<BODY>"target= newsUrl  class="share-btn email">Mail</a>' +
 
                     '</div>' +
 
