worked on weather.

--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
                 <div class="card-header">
                     <h3>Weather</h3>
                 </div>
-                <div class="card-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                <div class="card-body" id="weather">
+                   
                 </div>  
                 <div class="card-header">
                         <h3>Pollen</h3>
