--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h2>Today's top Stories </h2>
     </div>
     <div class="container">
-        <div class="row">
+        <div class="row" id="main-content">
             <!-- dynamic code generated using javascript -->
             <div class="grow col-sm-3 col-md-3 col-xs-12 style='position:fixed'">
                 <div class="card">
