added the counter for number of clicks on the articles in moment.js.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="row" id="main-content">
             <!-- dynamic code generated using javascript -->
-            <div class="grow col-sm-3 col-md-3 col-xs-12 style='position:fixed'">
+            <div class="col-sm-3 col-md-3 col-xs-12 style='position:fixed'">
                 <div class="card">
                     
                 <div class="card-header">
