update weather pollution

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="row" id="main-content">
             <!-- dynamic code generated using javascript -->
             <div class="col-sm-3 col-md-3 col-xs-12 style='position:fixed'">
-                <div class="card">
+                <div class="card h-100">
                     
                 <div class="card-header">
                     <h3>Weather</h3>
